@@ -4,6 +4,7 @@ require 'page-object/platforms'
 require 'page-object/element_locators'
 require 'page-object/nested_elements'
 require 'page-object/page_populator'
+require 'page-object/javascript_framework_facade'
 
 #
 # Module that when included adds functionality to a page object.  This module
@@ -63,6 +64,15 @@ module PageObject
   end
 
   #
+  # Set the javascript framework to use when determining number of
+  # ajax requests.  Valid frameworks are :jquery, :prototype, and
+  # :dojo
+  #
+  def self.javascript_framework=(framework)
+    PageObject::JavascriptFrameworkFacade.framework = framework
+  end
+
+  #
   # get the current page url
   #
   def current_url
@@ -113,6 +123,25 @@ module PageObject
   #
   def wait_until(timeout = 30, message = nil, &block)
     platform.wait_until(timeout, message, &block)
+  end
+
+
+  #
+  # Wait until there are no pending ajax requests.  This requires you
+  # to set the javascript framework in advance.
+  #
+  # @param [Numeric] the amount of time to wait for the block to return true.
+  # @param [String] the message to include with the error if we exceed
+  # the timeout duration.
+  #
+  def wait_for_ajax(timeout = 30, message = nil)
+    end_time = ::Time.now + timeout
+    until ::Time.now > end_time
+      return if browser.execute_script(::PageObject::JavascriptFrameworkFacade.pending_requests) == 0
+      sleep 1
+    end
+    message = "Timed out waiting for ajax requests to complete" unless message
+    raise message
   end
 
   #
