@@ -25,5 +25,6 @@ Gem::Specification.new do |s|
   s.add_development_dependency 'rspec', '>= 2.6.0'
   s.add_development_dependency 'cucumber', '>= 1.1.0'
   s.add_development_dependency 'yard', '>= 0.7.2'
+  s.add_development_dependency 'rack', '>= 1.0'
 
 end
